--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://oleg.fedoseev.io"
+baseURL = "https://oleg.fedoseev.io"
 languageCode = "en-us"
 title = "oleg.fedoseev"
 theme = "hemingway2"
